--- a/BreastCancerEvaluation.ipynb
+++ b/BreastCancerEvaluation.ipynb
@@ -27,7 +27,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I remember when i was 9 year old my parents were crying i was too young to understand the reason behind the sadness but my father told me that my mother was suffering from a stage 2 Breast Cancer. Once all my friends were sitting and we were discussing about our families and everyone was telling there stories.\n",
+        "I remember when i was 9 year old i was too young to understand the reason behind the sadness of my parents but my father told me that my mother was suffering from a stage 2 Breast Cancer and in another incident Once all my friends were sitting and we were discussing about our families and everyone was telling there stories.\n",
         "\n",
         "After my friend shared his sister’s story, multiple other people shared the name of their mothers, aunts, grandmothers, and close family members that had breast cancer.\n",
         "\n",
